--- a/projeto.html
+++ b/projeto.html
@@ -16,7 +16,7 @@
 <div id="conteiner">
 
   <div id="profile">
-    <img src="./projetos/meuavatar-transformed.png" alt="Minha foto">
+    <img src="./meuavatar-transformed.png" alt="Minha foto">
  
     <div id="name">@theussantana07</div>
 
@@ -24,7 +24,7 @@
  </div>
 
 
-<div id="switch" onclick="toggleMgode()">
+<div id="switch" onclick="toggleMode()">
   <button >
   </button>
   <div id="but" ></div>
@@ -74,6 +74,6 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-<script src="./projetos/script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
