--- a/projeto.html
+++ b/projeto.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project</title>
-  <link rel="stylesheet" href="projeto.css">
+  <link rel="stylesheet" href="./src/styles/projeto.css">
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <div id="conteiner">
 
   <div id="profile">
-    <img src="./meuavatar-transformed.png" alt="Minha foto">
+    <img src="./src/img/meuavatar-transformed.png" alt="Minha foto">
  
     <div id="name">@theussantana07</div>
 
@@ -74,6 +74,6 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
-<script src="./script.js"></script>
+<script src="./src/js/script.js"></script>
 </body>
 </html>
